Fix timeline spacing on mobile for even items

--- a/css/styles.css
+++ b/css/styles.css
@@ -13343,14 +13343,11 @@ footer .copyright {
         left: 31px;
     }
 
-    .timeline {
+    .timeline:nth-child(odd),
+    .timeline:nth-child(even) {
         width: 100%;
         padding-left: 70px;
         padding-right: 25px;
-    }
-
-    .timeline:nth-child(odd),
-    .timeline:nth-child(even) {
         left: 0;
         text-align: left;
     }
